tests/machine/x/java/list_nested_assign.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramslist_nested_assign315063815/001/Main.java:3: error: incompatible types: no instance(s) of type variable(s) T,T,T exist so that List<T> conforms to int
	static int matrix = java.util.Arrays.asList(java.util.Arrays.asList(1, 2), java.util.Arrays.asList(3, 4));
	                                           ^
  where T is a type-variable:
    T extends Object declared in method <T>asList(T...)
/tmp/TestCompileValidProgramslist_nested_assign315063815/001/Main.java:6: error: int cannot be dereferenced
	System.out.println(matrix.get(1).get(0));
	                         ^
2 errors


  1| var matrix = [[1,2],[3,4]]
  2| matrix[1][0] = 5
